# genetic_algorithm

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: ros_gz_bridge.yaml
launch/: ign_gazebo_sim.launch.py
msg/: Organism.msg  OrganismParameter.msg  PopulationStats.msg
scripts/: ga_classes.py  ign_gazebo_sim.py
sdf/: my_bot.sdf  my_bot.sdf.xacro  robot.xacro  world.xacro
